# astrolaunch

./: README.md  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: appsLib.rs  clockLib.rs  liveDataLib.rs  main.rs  mediaLib.rs  searchFilesLib.rs  settings.rs  snippetsLib.rs  systemManagementLib.rs  windowMngLib.rs
