[package]
name = "astrolaunch"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "astrolaunch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
[target.'cfg(target_os = "macos")'.dependencies]
mac-notification-sys = "0.6.5"
[target.'cfg(target_os = "windows")'.dependencies]
windows-notifications = "0.0.0"
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.1"

tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
meval = "0.2.0"
urlencoding = "2.1.3"
objc = "0.2.7"
base64 = "0.22.1"
strsim = "0.11.1"
walkdir = "2.5.0"
arboard = "3.6.0"
once_cell = "1.21.3"
reqwest = { version = "0.12.22", features = ["json", "blocking", "rustls-tls"] }
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
chrono = "0.4.41"

